# schema-registry-cli

./: .fizzer.yaml  .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  committed.toml  justfile  release.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: check.yml  release.yml  repo.yml  scheduled.yml  test.yml
docker/: docker-compose.yaml
hooks/: commit-msg
schema-registry-api/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
schema-registry-api/examples/: list-subjects.rs  register-schema.rs
schema-registry-api/src/: lib.rs
schema-registry-api/src/domain/: compatibility.rs  error.rs  mod.rs  mode.rs
schema-registry-api/src/domain/schema/: id.rs  mod.rs  reference.rs  version.rs
schema-registry-api/src/domain/subject/: mod.rs  name.rs
schema-registry-api/src/service/: compatibility.rs  config.rs  error.rs  mod.rs  mode.rs  schema.rs  subject.rs
schema-registry-api/tests/: compatibility.http  config.http  mode.http  schema.http  subjects.http  test-api-with-docker.rs
schema-registry-api/tests/schema_registry/: compatibility_client.rs  config_client.rs  mod.rs  mode_client.rs  schema_client.rs  subject_client.rs
schema-registry-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
schema-registry-cli/src/: error.rs  init_tracing.rs  lib.rs  main.rs
schema-registry-cli/src/command/: completion.rs  mod.rs  schema.rs  subject.rs
schema-registry-cli/src/settings/: completion.rs  mod.rs  schema.rs  subjects.rs  verbosity.rs
schema-registry-cli/tests/: test-api-with-docker.rs  test-cli.rs
schema-registry-cli/tests/assets/: a_record.json  a_record.plop  a_record.proto
schema-registry-cli/tests/cmd/: subject-check-avro.toml  subject-check-avro2.toml  subject-check-json.toml  subject-check-proto.toml  subject-delete.toml  subject-delete2.toml  subject-register-avro.toml  subject-register-avro2.toml  subject-register-json.toml  subject_list.toml  subject_list_all.toml  subject_list_filter.toml
src/: lib.rs  main.rs
