[package]
name = "schema-registry-cli"
version = "0.1.0"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
edition = "2021"

keywords = []
categories = []

documentation = "https://docs.rs/schema-registry-cli"
homepage = "https://github.com/ilaborie/schema-registry-cli"
repository = "https://github.com/ilaborie/schema-registry-cli.git"

[features]

[dependencies]

[dev-dependencies]
assert2 = "0.3.10"
proptest = "1.1.0"
rstest = "0.17.0"

[profile.release]
lto = true
codegen-units = 1
