[package]
name = "schema-registry-api"
version = "0.1.0"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
description = "REST API for a schema-registry"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.64.0" # MSRV from clap

keywords = ["schema-registry"]
categories = []

documentation = "https://docs.rs/schema-registry-cli"
homepage = "https://github.com/ilaborie/schema-registry-cli"
repository = "https://github.com/ilaborie/schema-registry-cli.git"

[features]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11.16", features = [
    "json",
    "rustls-tls-native-roots",
], default-features = false }
reqwest-middleware = "0.2.1"
reqwest-tracing = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.40"
tracing = "0.1.37"
url = "2.3.1"

[dev-dependencies]
anyhow = "1.0.70"
assert2 = "0.3.10"
insta = { version = "1.29", features = ["json"] }
nanoid = "0.4"
proptest = "1.1.0"
rstest = "0.17.0"
tokio = { version = "1", features = ["macros", "rt", "process", "sync"] }
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }
