[package]
name = "schema-registry-api"
version = "1.0.0"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
description = "REST API for a schema-registry"
license = "MIT OR Apache-2.0"
edition = "2021"
# MSRV from clap
rust-version = "1.64.0"

keywords = ["schema-registry"]
categories = []

documentation = "https://docs.rs/schema-registry-api"
homepage = "https://github.com/ilaborie/schema-registry-cli/schema-registry-api"
repository = "https://github.com/ilaborie/schema-registry-api.git"

[features]

[dependencies]
reqwest = { version = "0.11.16", features = [
    "json",
    "rustls-tls-native-roots",
], default-features = false }
reqwest-middleware = "0.2.1"
reqwest-tracing = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.40"
tracing = "0.1.37"
url = "2.3.1"

[dev-dependencies]
anyhow = "1.0.70"
assert2 = "0.3.10"
insta = { version = "1.29", features = ["json"] }
nanoid = "0.4"
proptest = "1.1.0"
rstest = "0.17.0"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "sync",
] }
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }
