[package]
name = "schema-registry-api"
version = "2.0.1"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
description = "REST API for a schema-registry"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.71.1"

keywords = ["schema-registry"]
categories = []

documentation = "https://docs.rs/schema-registry-api"
homepage = "https://github.com/ilaborie/schema-registry-cli/schema-registry-api"
repository = "https://github.com/ilaborie/schema-registry-api.git"

[features]
default = []

# Feature from reqwest
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]

[dependencies]
reqwest = { version = "0.12.9", features = ["json"], default-features = false }
reqwest-middleware = { version = "0.4.0", features = ["json"] }
reqwest-tracing = "0.5.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tracing = "0.1.41"
url = "2.5.4"

[dev-dependencies]
anyhow = "1.0.93"
assert2 = "0.3.15"
insta = { version = "1.41.1", features = ["json"] }
nanoid = "0.4"
proptest = "1.5.0"
rstest = "0.23.0"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "sync",
] }
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
