[package]
name = "schema-registry-cli"
version = "2.1.0"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
description = "CLI for a schema-registry"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.64.0"                         # MSRV from clap

keywords = ["schema-registry"]
categories = []

documentation = "https://docs.rs/schema-registry-cli"
homepage = "https://github.com/ilaborie/schema-registry-cli"
repository = "https://github.com/ilaborie/schema-registry-cli.git"

[features]

[dependencies]
clap = { version = "4.2", features = ["derive"] }
clap_complete = "4.2"
schema-registry-api = { version = "^2.0.0", path = "../schema-registry-api" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.13", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "sync",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }
url = "2.3.1"

[dev-dependencies]
anyhow = "1.0.70"
assert2 = "0.3.10"
filetime = "0.2.10"                               # For minimal version
insta = { version = "1.29", features = ["json"] }
nanoid = "0.4"
proptest = "1.1.0"
rstest = "0.17.0"
trycmd = "0.14.16"
ulid = "1.0.0"

[build-dependencies]
clap = "4.2"
clap_mangen = "0.2"
