[package]
name = "schema-registry-cli"
version = "2.1.0"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
description = "CLI for a schema-registry"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.74.0"

keywords = ["schema-registry"]
categories = []

documentation = "https://docs.rs/schema-registry-cli"
homepage = "https://github.com/ilaborie/schema-registry-cli"
repository = "https://github.com/ilaborie/schema-registry-cli.git"

[features]

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
clap_complete = "4.5.38"
schema-registry-api = { version = "^2.0.0", path = "../schema-registry-api" }
serde = "1.0.215"
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "sync",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
url = "2.5.4"

[dev-dependencies]
anyhow = "1.0.93"
assert2 = "0.3.15"
filetime = "0.2.25"                                 # For minimal version
insta = { version = "1.41.1", features = ["json"] }
nanoid = "0.4.0"
proptest = "1.5.0"
rstest = "0.23.0"
trycmd = "0.15.8"
ulid = "1.1.3"

[build-dependencies]
clap = "4.5.21"
clap_mangen = "0.2.24"
